--- a/app/src/main/res/layout/fragment_message.xml
+++ b/app/src/main/res/layout/fragment_message.xml
@@ -3,20 +3,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".message.MessageFragment">
 <android.support.design.widget.TabLayout
     android:layout_width="match_parent"
+    app:tabIndicatorColor="#000"
+    android:id="@+id/tabmessage"
     android:layout_height="wrap_content"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
-<android.support.v4.widget.SwipeRefreshLayout
+<android.support.v4.view.ViewPager
+    android:id="@+id/vp"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rec"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-</android.support.v4.widget.SwipeRefreshLayout>
+    android:layout_height="match_parent"/>
 </LinearLayout>
