--- a/app/src/main/res/layout/fragment_blank_fragment4.xml
+++ b/app/src/main/res/layout/fragment_blank_fragment4.xml
@@ -4,11 +4,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".message.BlankFragment1">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+<android.support.v4.widget.SwipeRefreshLayout
+    android:id="@+id/sw"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+    <ListView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:id="@+id/rec"
+        android:layout_height="match_parent"/>
+
+</android.support.v4.widget.SwipeRefreshLayout>
 
 </FrameLayout>
