--- a/app/src/main/res/layout/fragment_message.xml
+++ b/app/src/main/res/layout/fragment_message.xml
@@ -6,14 +6,65 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     tools:context=".message.MessageFragment">
-<android.support.design.widget.TabLayout
+<android.support.v7.widget.CardView
     android:layout_width="match_parent"
-    app:tabIndicatorColor="#000"
-    android:id="@+id/tabmessage"
-    android:layout_height="wrap_content"/>
+    app:cardElevation="10dp"
+    android:layout_height="wrap_content">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <android.support.design.widget.AppBarLayout
+            android:layout_width="0dp"
+            android:layout_weight="2"
+            android:background="#fff"
+            app:elevation="10dp"
+            android:layout_height="wrap_content">
+            <android.support.design.widget.TabLayout
+                android:layout_width="match_parent"
+                app:tabTextColor="#000"
+                app:tabSelectedTextColor="#000"
+                app:tabIndicatorColor="#000"
+                android:id="@+id/tabmessage"
+                android:layout_height="wrap_content"/>
+        </android.support.design.widget.AppBarLayout>
+        <LinearLayout
+            android:layout_weight="1"
+            android:paddingEnd="20dp"
+            android:layout_width="0dp"
+            android:gravity="center|end"
+            android:layout_height="match_parent">
+            <ImageView
+                android:background="@mipmap/fabiao"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+    </LinearLayout>
+</android.support.v7.widget.CardView>
+    <View
+        android:background="#ccc"
+        android:layout_width="match_parent"
+        android:layout_marginBottom="1dp"
+        android:layout_height="1dp"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
+    <LinearLayout
+        android:paddingStart="10dp"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_weight="1"
+            android:text="通知列表"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:text="全部已读 √"
+            android:paddingEnd="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
 <android.support.v4.view.ViewPager
     android:id="@+id/vp"
     android:layout_width="match_parent"
